# hazbin_tracker

./: .gitignore  404.html  CHANGELOG.rst  HazbinTracker.spec  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: code_quality.yml  deploy_docs.yml  tests.yml  unit_tests.yml
autoapi/hazbin_tracker/: index.html
autoapi/hazbin_tracker/core/: index.html
autoapi/hazbin_tracker/core/cards_tracker/: index.html
autoapi/hazbin_tracker/core/constants/: index.html
autoapi/hazbin_tracker/core/logger/: index.html
autoapi/hazbin_tracker/core/scrapper/: index.html
autoapi/hazbin_tracker/core/settings/: index.html
autoapi/hazbin_tracker/ui/: index.html
autoapi/hazbin_tracker/ui/about_dialog/: index.html
autoapi/hazbin_tracker/ui/application/: index.html
autoapi/hazbin_tracker/ui/check_history_dialog/: index.html
autoapi/hazbin_tracker/ui/models/: index.html
autoapi/hazbin_tracker/ui/models/check_history/: index.html
autoapi/hazbin_tracker/ui/pyside_utils/: index.html
autoapi/hazbin_tracker/ui/settings_dialog/: index.html
autoapi/hazbin_tracker/ui/tray/: index.html
autoapi/summary/: index.html
dev/: index.html
docs/: index.md
docs/dev/: index.md
docs/user/: index.md
resources/: resources.qrc  resources_rc.py
resources/icons/: HazbinTracker.icns
search/: search_index.json
src/hazbin_tracker/: hooks-pyside6.py  main.py
src/hazbin_tracker/api/: __init__.py
src/hazbin_tracker/core/: cards_tracker.py  config.py  constants.py  logger.py  scrapper.py  settings.py
src/hazbin_tracker/ui/: about_dialog.py  application.py  check_history_dialog.py  pyside_utils.py  settings_dialog.py  tray.py
src/hazbin_tracker/ui/models/: check_history.py
tests/: test_scrapper.py  test_tracker.py
user/: index.html
