[project]
name = "hazbin-tracker"
version = "1.0.0"
description = "Hazbin hotel cards release tracker"
authors = [
    {name = "Dmitrii Shevchenko",email = "47799401+sowwic@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
packages = [
    {include = "hazbin_tracker"},
]
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "platformdirs (>=4.5.0,<5.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 89