[project]
name = "hazbin-tracker"
version = "1.0.5"
description = "Hazbin hotel cards release tracker"
authors = [
    {name = "Dmitrii Shevchenko",email = "47799401+sowwic@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
packages = [
    {include = "hazbin_tracker"},
]
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "platformdirs (>=4.5.0,<5.0.0)",
    
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocstrings[python] (>=1.0.0,<2.0.0)",
    "mkdocs-autorefs (>=1.4.3,<2.0.0)",
    "mkdocs-autoapi (>=0.4.1,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

show-fixes = true
line-length = 89
lint.select = [
    "E",
    "F",
    "UP",
    "D",
]
lint.ignore = [
    "D413",
    "D100",
    "D104",
    "D103",
]

[tool.pytest.ini_options]
addopts = "--cov=hazbin_tracker --cov-report=term-missing"